/* $Id: ChangeLog,v 1.2773 2005-06-19 12:45:27 sao2l02 Exp $ */
2005-06-18: Dietrich Teickner <dietrich_teickner@arcor   >
    - inlude:   o Since this day removing obsolate headers from inlude/win.
                  Move some others to user32 and shell32 for better sync with Wine.
                  Action isn't ended yet.  
2005-05-16: Dietrich Teickner <dietrich_teickner@arcor   >
    - wrc:      o accessing also the libs/unicode, common unicode-lib.
                  wrap some parts to libs/port.
2005-05-11: Dietrich Teickner <dietrich_teickner@arcor   >
    - inlude:   o adding build of template headers from wine idl-files.
                  Changes in some makefile's, widl and libs/port.
                  skip '#pragma pack(n)' for widl in some existing headers.  
2005-05-07: Andy Willis <abwillis@comcast   >
    - libs\makefile  add port so that widl builds
2005-05-07: Dietrich Teickner <dietrich_teickner@arcor   >
    - \makefile:o makefile, libs\unicode\, libs\wpp, tools\widl.
                  Changes for a new build tool from wine (widl) and future common unicode-lib.
2005-04-24: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  reaktivate message chain comparsion with new pointer in the LISTVIEW_INFO strukture.
                  reseting callbackmask crashs in some cases.
    - kernel32: o src\kernel32\winimagelx.cpp
                  stub - init of the IMAGE_EXPORT_DIRECTORY for lx-dll's(pe-header of the orign odin-dll's).
2005-04-19: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  protect us from recursive callback with reset the callbackmask before callback and restore after.
    - user32:   o src\user32\wsprintf.cpp
                  switch of the debuging of wsprintf
                o src\user32\message.cpp
                  stop the message-loop for Agent 2.0 (currently no better solution) 