@@ -1,4 +1,4 @@
-/* $Id: directory.cpp,v 1.51 2005-06-26 18:47:56 sao2l02 Exp $ */
+/* $Id: directory.cpp,v 1.52 2006-03-25 14:03:28 sao2l02 Exp $ */
 
 /*
  * Win32 Directory functions for OS/2
@@ -38,6 +38,21 @@
 #include "oslibdos.h"
 #include "profile.h"
 #include "fileio.h"
+
+#include "ctype.h"
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+ULONG APIENTRY _DosSetDefaultDisk(ULONG a);
+#undef  DosSetDefaultDisk
+#define DosSetDefaultDisk _DosSetDefaultDisk
+
+#ifdef __cplusplus
+}
+#endif
+
 
 #define DBG_LOCALLOG	DBG_directory
 #include "dbglocal.h"
@@ -196,9 +211,37 @@ BOOL WIN32API SetCurrentDirectoryA(LPCSTR lpstrDirectory)
     return FALSE;
   }
   
+  int len = lstrlenA(lpstrDirectory);
+
+  // More precisely simulate Windows behaviour concerning paths like
+  // "C:\" or "C:"
+  //
+  // Note: Windows treats the first as a change to the root directory,
+  // while the second corresponds rather to a DosSetDefaultDisk on OS/2
+  // without a related directory change (tested on Win2K and WinXP),
+  // while the Open32 function treats both as a change to the root.
+  //
+  // Note: Switching to e.g. "H:" if the current directory is on another
+  // drive (i.e. like C:\Subdir) has a very strange effect on Windows:
+  // it changes to drive H: and to the subdirectory that has once been
+  // current there BEFORE the program started, not any directory that
+  // has been current there during program run! Assuming that not many
+  // programs will rely on this indeed very strange behaviour it is not
+  // exactly duplicated.
+  //
+  // Cornelis Bockemuehl, 2006-03-21
+  if((2 == len) && (':' == lpstrDirectory[1]))
+  {
+    dprintf(("DosSetDefaultDisk %s, not SetCurrentDirectoryA", lpstrDirectory));
+    if(NO_ERROR ==  DosSetDefaultDisk(toupper(lpstrDirectory[0] - 'A' + 1)))
+      return TRUE;
+
+    SetLastError(ERROR_INVALID_DRIVE);
+    return FALSE;
+  }
+
   // cut off trailing backslashes
   // not if a process wants to change to the root directory
-  int len = lstrlenA(lpstrDirectory);
   if ( ( (lpstrDirectory[len - 1] == '\\') ||
          (lpstrDirectory[len - 1] == '/') ) &&
        (len != 1) )
