@@ -1,4 +1,4 @@
-# $Id: makefile,v 1.89 2005-03-06 10:36:03 sao2l02 Exp $
+# $Id: makefile,v 1.90 2006-03-25 14:03:10 sao2l02 Exp $
 
 #
 # Odin32 API
@@ -26,7 +26,7 @@
 #
 # Exclude lists which is to be passed in to DOWITHDIRS
 #
-NOTTOBEMADE = CVS;pe2lx;odin32api;odinwps;spy;odinldr;ws2help;win16ldr;oslib;custombuild;opengl;programs;crtdll;msvcrt   # generally not made
+NOTTOBEMADE = CVS;pe2lx;odin32api;odinwps;spy;odinldr;ws2help;win16ldr;oslib;custombuild;opengl;programs;crtdll #;msvcrt   # generally not made
 NOTDLLS     = $(NOTTOBEMADE);peldr;dllentry;guidlib     # not dlls
 NOTHAVELIBS = $(NOTTOBEMADE);peldr                      # don't generate libs
 NOTWIN32DLLS= $(NOTDLLS);win32k;odincrt;dllentry        # not win32 dlls.
